# wildlife-detector

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
configs/: dataset.yaml  train_config.yaml
models/: best.pt
results/: results.csv
src/: prepare_data.py  train.py
