[project]
name = "wildlife-detector"
version = "0.1.0"
description = "YOLOv8 wildlife detection trained from scratch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ultralytics>=8.2.0",
    "wandb>=0.17.0",
    "gradio>=4.0.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
